--- a/sass/core/blog/_view-post.scss
+++ b/sass/core/blog/_view-post.scss
@@ -10,14 +10,17 @@ article {
 }
 
 nav.blog {
+  margin-top: 2em;
+
   li {
     list-style-type: none;
+    margin-top: 1em;
   }
+}
 
-  #toggleComments {
-    border: none;
-    cursor: pointer;
-    margin-top: 2em;
-    padding: 0.2em;
-  }
+#toggleComments {
+  border: none;
+  cursor: pointer;
+  margin-top: 2em;
+  padding: 0.2em;
 }
